--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,7 @@ spring.mail.debug=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 
-
+## App Properties
+app.jwt-secret= JWTSecretKey
+## 7 day
+app.jwt-expiration-milliseconds = 604800000
